--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^27.0.1",
-    "native-base": "^2.5.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-form-builder": "^1.0.15"
